# wadatsumi

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TASKS.todo  rust-toolchain
benches/: cpu.rs
script/: bench  build
src/: bits.rs  bus.rs  cart.rs  cartridge.rs  chip_8.rs  cpu.rs  decode.rs  errors.rs  execute.rs  frame.rs  gpu.rs  high_ram.rs  instruction.rs  lib.rs  logger.rs  machine.rs  main.rs  memory.rs  mmu.rs  mode.rs  om.rs  op.rs  opcode.rs  operation.rs  sound.rs  state.rs  timer.rs  work_ram.rs
src/cpu/: disassembler.rs  executor.rs  instruction.rs  io.rs  mod.rs  operands.rs  operations.rs  registers.rs  state.rs  tracer.rs
src/gb/: bus.rs  cart.rs  cpu.rs  gpu.rs  joypad.rs  machine.rs  mod.rs  om.rs  op.rs  operation.rs  timer.rs
src/gb/apu/: ch1.rs  ch2.rs  ch3.rs  ch4.rs  mod.rs
src/instruction/: condition.rs  data_processing_operation.rs  mod.rs  operand2.rs  register.rs  shift.rs  unit.rs
src/instruction/arm/: execute.rs  mod.rs
src/instruction/thumb/: execute.rs  mod.rs
src/util/: int.rs
tests/: cpu.rs
