[package]
name = "wadatsumi"
version = "0.1.0"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]

[dependencies]
sdl2 = "0.30"
error-chain = "0.11.0"
log = { version = "0.3", features = ["release_max_level_warn"] }
env_logger = "0.4"
lazy_static = "0.2"
bitflags = "1"
ansi_term = "0.9"
chrono = "0.4"

[profile.release]
lto = true
opt-level = 3
debug = false
codegen-units = 1
debug-assertions = false
rpath = false
panic = "abort"
